# openpath

./: .gitignore  README.md  requirements.txt
OpenPath/: HEST_evaluation.py  README.md  _utils.py  eval_config  install.sh  pyproject.toml  run.sh  run_1node.sbatch  run_1node.sh  run_ablation.sh  run_master_node.sh  run_other_nodes.sh  run_short_1gpu.sh
OpenPath/dinov2/: eval_config.yaml  eval_dinov3.yaml  eval_dinov3_custom.yaml
OpenPath/dinov2/configs/: ssl_default_config.yaml
OpenPath/dinov2/configs/train/: openpath_vitg14.yaml  vitg14_reg4.yaml  vits14_reg4.yaml
OpenPath/dinov2/data/: augmentations.py  collate.py  loaders.py  openpath_wds.py
OpenPath/dinov2/data/datasets/: __init__.py  slide_dataset.py  test_data.py
OpenPath/dinov2/distributed/: __init__.py
OpenPath/dinov2/fsdp/: __init__.py
OpenPath/dinov2/hub/: backbones.py
OpenPath/dinov2/logging/: helpers.py
OpenPath/dinov2/loss/: __init__.py  gram_loss.py  kde_loss.py
OpenPath/dinov2/run/: submit.py
OpenPath/dinov2/train/: ssl_meta_arch.py  train.py
OpenPath/eval_configs/: bach.yaml  bracs.yaml  breakhist.yaml  cam16_small.yaml  consep.yaml  crc.yaml  gleason.yaml  mhist.yaml  monusac.yaml  panda_small.yaml  pcam.yaml  pcam_10.yaml
OpenPath/prepatching_scripts/: build_parquet_sample_dataset.py  create_sample_dataset_for_ablations.py  create_sample_dataset_txt.py  sample_dataset_ablation.txt
eval/: openpath_eva_backbone.py  run_hest_ref.py  run_patch_eval.sh  st_bench.py
eval/eva_configs/: bach.yaml  crc.yaml  (+1 more)
scripts/: autoresume.sh  launch.sh  run_hest_3way.py  watch_eval.sh
